--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -183,6 +183,18 @@
                 <Setter Property="Data" Value="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2M 24,24 0,0z" />
             </Style>
 
+            <Style x:Key="PathIncrease" TargetType="Path" BasedOn="{StaticResource PathBase}">
+                <Setter Property="Data" Value="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2M 24,24 0,0z" />
+            </Style>
+
+            <Style x:Key="PathDecrease" TargetType="Path" BasedOn="{StaticResource PathBase}">
+                <Setter Property="Data" Value="M19,13H5v-2h14v2M 24,24 0,0z" />
+            </Style>
+
+            <Style x:Key="PathSleepTimer" TargetType="Path" BasedOn="{StaticResource PathBase}">
+                <Setter Property="Data" Value="M 9 1 L 9 3 L 15 3 L 15 1 L 9 1 z M 12 4 C 7.03 4 3 8.03 3 13 C 3 17.97 7.02 22 12 22 C 16.98 22 21 17.97 21 13 C 21 10.88 20.259297 8.930625 19.029297 7.390625 L 20.449219 5.9707031 C 20.019219 5.4607031 19.549062 4.9805469 19.039062 4.5605469 L 17.619141 5.9804688 C 16.069141 4.7404687 14.12 4 12 4 z M 12 6 C 15.87 6 19 9.13 19 13 C 19 16.87 15.87 20 12 20 C 8.13 20 5 16.87 5 13 C 5 9.13 8.13 6 12 6 z M 12.226562 8.3769531 C 9.6094289 8.4213562 7.5566406 10.55715 7.5566406 13.130859 C 7.5566406 15.759023 9.6901955 17.890625 12.318359 17.890625 C 14.084751 17.890625 15.617724 16.930304 16.441406 15.501953 C 12.865769 15.382924 10.685509 11.487949 12.480469 8.3789062 C 12.394917 8.3759305 12.310986 8.3755208 12.226562 8.3769531 M 24,24 0,0z" />
+            </Style>
+
 
             <Style x:Key="PlayerButton" TargetType="ImageButton">
                 <Setter Property="BackgroundColor" Value="Transparent" />
