--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/DownloadsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/DownloadsPage.xaml
@@ -98,7 +98,6 @@
             </CollectionView>
         </RefreshView>
 
-        <views:PlayerControlMargin Grid.Row="2" />
-        <views:PlayerControl Grid.Row="0" Grid.RowSpan="3" x:Name="PlayerControl" />
+        <views:PlayerControl Grid.Row="2" />
     </Grid>
 </ContentPage>
