--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Favorite/FavoritesPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Favorite/FavoritesPage.xaml
@@ -238,9 +238,7 @@
             </Label>
         </HorizontalStackLayout>
 
-        <views:PlayerControlMargin Grid.Row="2" />
-        <views:PlayerControl Grid.Row="0" Grid.RowSpan="3" x:Name="PlayerControl" />
-
+        <views:PlayerControl Grid.Row="3" />
     </Grid>
         
     <!--</RefreshView>-->
