--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Player/PlaylistPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Player/PlaylistPage.xaml
@@ -78,8 +78,7 @@
             Grid.Row="1">
         </CollectionView>
 
-        <views:PlayerControlMargin Grid.Row="2" />
-        <views:PlayerControl Grid.Row="0" Grid.RowSpan="3" x:Name="PlayerControl" />
+        <views:PlayerControl Grid.Row="2" />
 
     </Grid>
         
